# antwika

./: .gitignore  CHANGELOG.md  CMakeLists.txt  README.md  conanfile.py
.devcontainer/base/: Dockerfile  devcontainer.json
.devcontainer/base/scripts/: info.sh  welcome.sh
.devcontainer/clang/: Dockerfile  devcontainer.json
.devcontainer/clang/scripts/: toolchain-info.sh
.devcontainer/gcc/: Dockerfile  devcontainer.json
.devcontainer/gcc/scripts/: toolchain-info.sh
.devcontainer/gnu/: Dockerfile  devcontainer.json
.devcontainer/llvm/: Dockerfile  devcontainer.json
.devcontainer/mingw/: Dockerfile  devcontainer.json
.devcontainer/mingw-w64/: Dockerfile  devcontainer.json
.devcontainer/mingw-w64/scripts/: toolchain-info.sh
.github/workflows/: build-dev-containers.yml  release.yml
apps/app/: CMakeLists.txt  conanfile.py
apps/app/src/: main.cpp
apps/app/src/antwika/app/: App.hpp
apps/app/src/app/: App.cpp
apps/app/test_package/: CMakeLists.txt  conanfile.py
apps/app/test_package/src/app/: AppTest.cpp
libs/engine/: CMakeLists.txt  conanfile.py
libs/engine/include/antwika/engine/: Engine.hpp
libs/engine/mocks/: CMakeLists.txt
libs/engine/mocks/include/antwika/engine/mocks/: MockEngine.hpp
libs/engine/src/antwika/engine/: Engine.cpp
libs/engine/test_package/: CMakeLists.txt  conanfile.py
libs/engine/test_package/src/antwika/engine/: EngineTest.cpp
libs/engine/tests/: CMakeLists.txt  EngineTest.cpp
libs/log/: CMakeLists.txt  conanfile.py
libs/log/include/antwika/log/: Appender.hpp  ILogger.hpp  Logger.hpp  NullAppender.hpp  StreamAppender.hpp
libs/log/mocks/: CMakeLists.txt
libs/log/mocks/include/antwika/log/mocks/: MockAppender.hpp  MockLogger.hpp
libs/log/src/antwika/log/: Logger.cpp  NullAppender.cpp  StreamAppender.cpp
libs/log/test_package/: CMakeLists.txt  conanfile.py
libs/log/test_package/src/antwika/log/: LoggerTest.cpp  StreamAppenderTest.cpp
libs/log/tests/: CMakeLists.txt
libs/time/: CMakeLists.txt  conanfile.py
libs/time/fakes/: CMakeLists.txt
libs/time/fakes/include/antwika/time/fakes/: FakeClock.hpp
libs/time/include/antwika/time/: IClock.hpp  SystemClock.hpp
libs/time/src/antwika/time/: SystemClock.cpp
libs/time/test_package/: CMakeLists.txt  conanfile.py
libs/time/test_package/src/antwika/time/: FakeClockTest.cpp
libs/time/tests/: CMakeLists.txt  SystemClockTest.cpp
profiles/host/: clang-linux-x86_64  mingw-windows-x86_64
